[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
chrono = "0.4.38"
hound = "3.5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows = { version = "0.58.0", features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_SystemServices",
] }
